# Ones

./: README.md  meson.build  xyz.desyncd.Ones.json
data/: meson.build  xyz.desyncd.Ones.desktop.in  xyz.desyncd.Ones.gschema.xml  xyz.desyncd.Ones.metainfo.xml.in  xyz.desyncd.Ones.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.js  meson.build  window.blp  window.js  xyz.desyncd.Ones.data.gresource.xml  xyz.desyncd.Ones.src.gresource.xml
